@@ -774,8 +774,6 @@ fitted.plm <- function(object, model = NULL, ...){
   if (is.null(model)) model <- fittedmodel
   effect <- describe(object, "effect")
   X <- model.matrix(object, model = model)
-  # QDF ; remove the intercept in case of fd models
-  if (model == "fd") X <- X[, - 1]
   y <- pmodel.response(object, model = model)
   beta <- coef(object)
   # Kevin Tappe 2016-01-09 : perfect correlation of some columns of
@@ -825,7 +823,10 @@ fitted.plm <- function(object, model = NULL, ...){
     }
   }
   else{
-    fv <- as.numeric(crossprod(t(X), beta))
+      # QDF just in case check the conformabilty of beta and X cols,
+      # usefull for FD censored/truncated models
+      comonpars <- union(colnames(X), names(beta))
+      fv <- as.numeric(crossprod(t(X[, comonpars]), beta[comonpars]))
   }
   structure(fv, index =  index(object), class = "pseries")
 }
